<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_5" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="A3D-gu-snk">
                                <rect key="frame" x="20" y="98" width="374" height="730"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f7o-tu-xFe">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.666666666666668"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRW-RQ-t0S" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="338" height="23.666666666666668"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (iOS)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wT3-jR-Ibd" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.666666666666668"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White (iOS)"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PdS-vl-7Ls" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.666666666666629" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP White (iOS)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="PdS-vl-7Ls" secondAttribute="height" multiplier="2:3" id="a1x-eQ-vBD"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcb-96-bhy" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="624.66666666666663" width="374" height="25.333333333333371"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White (iOS)"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="MZC-Rd-g8X">
                                        <rect key="frame" x="0.0" y="670" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJv-Ag-oIE" userLabel="No Button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                                <color key="tintColor" name="YP Red (iOS)"/>
                                                <inset key="contentEdgeInsets" minX="197" minY="718" maxX="0.0" maxY="0.0"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Нет" cornerStyle="fixed" titleAlignment="center">
                                                    <backgroundConfiguration key="background" cornerRadius="15">
                                                        <color key="backgroundColor" name="YP White (iOS)"/>
                                                    </backgroundConfiguration>
                                                    <fontDescription key="titleFontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                    <color key="baseForegroundColor" name="YP Black (iOS)"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ESg-EC-fk7"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNv-VU-Qc7" userLabel="Yes Button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                                <inset key="contentEdgeInsets" minX="197" minY="718" maxX="0.0" maxY="0.0"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Да" cornerStyle="fixed" titleAlignment="center">
                                                    <backgroundConfiguration key="background" cornerRadius="15">
                                                        <color key="backgroundColor" name="YP White (iOS)"/>
                                                    </backgroundConfiguration>
                                                    <fontDescription key="titleFontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                    <color key="baseForegroundColor" name="YP Black (iOS)"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oOh-4L-yzS"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="mFH-PC-l3n"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="B3j-b4-wKn">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black (iOS)"/>
                        <constraints>
                            <constraint firstItem="B3j-b4-wKn" firstAttribute="centerY" secondItem="PdS-vl-7Ls" secondAttribute="centerY" id="3OO-Vm-beB"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="A3D-gu-snk" secondAttribute="trailing" constant="20" id="3nN-gn-aUB"/>
                            <constraint firstItem="A3D-gu-snk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Sgg-4W-bd5"/>
                            <constraint firstItem="B3j-b4-wKn" firstAttribute="centerX" secondItem="PdS-vl-7Ls" secondAttribute="centerX" id="XxP-ds-oqX"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="A3D-gu-snk" secondAttribute="bottom" id="Ylc-tG-dbC"/>
                            <constraint firstItem="A3D-gu-snk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9.9999999999999716" id="jV2-0I-pv2"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="B3j-b4-wKn" id="uSR-fc-aRs"/>
                        <outlet property="counterLabel" destination="wT3-jR-Ibd" id="r45-sc-zWe"/>
                        <outlet property="imageView" destination="PdS-vl-7Ls" id="saG-Ci-LEv"/>
                        <outlet property="noButton" destination="iJv-Ag-oIE" id="G0G-UE-Xtn"/>
                        <outlet property="textLabel" destination="bcb-96-bhy" id="I0c-cn-MAk"/>
                        <outlet property="yesButton" destination="RNv-VU-Qc7" id="nLa-W8-qF5"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black (iOS)">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP Red (iOS)">
            <color red="0.96078431372549022" green="0.41960784313725491" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White (iOS)">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
