...
        noButton.isEnabled = false
        yesButton.isEnabled = false
        
        let model = AlertModel(titleAlert: result.titleAlert,
                               messageAlert: result.textAlert,
                               buttonTextAlert: result.buttonTextAlert,
                               accessibilityIdentifier: "Game result") { [weak self] in
            guard let self else {return}
            self.presenter?.restartGame()
        }
        alertPresenter.showResults(in: self, model: model)
    }
    
...
